src/objects/Work_Order__c.object
<CustomObject>
    <description>Object is used for creating Work Orders for InvoiceWorks.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (Account)</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Duration__c</fullName>
        <label>Actual Duration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Finish_Date__c</fullName>
        <label>Actual Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Air_France_Project__c</fullName>
        <label>Air France Project</label>
        <picklist>
            <picklistValues>
                <fullName>CARAIB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENEX IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENEX OUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Power Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Change_Order__c</fullName>
        <description>Customer Change Order number (to link to a paper quote sent ot the WO requestor for approval and payment)</description>
        <label>Customer Change Order</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contract_Comments__c</fullName>
        <label>Customer Contract Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Contract_Status_Time_Stamp__c</fullName>
        <label>Customer Contract Status Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Contract_Status__c</fullName>
        <label>Customer Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms &amp; Conditions under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms &amp; Conditions Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCF Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCF Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Contract_Value__c</fullName>
        <label>Customer Contract Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Currency__c</fullName>
        <label>Customer Price Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Price__c</fullName>
        <description>price from the Change Order</description>
        <label>Customer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forecasted_PROD_delivey__c</fullName>
        <label>Forecasted PROD delivey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasted_UAT_signoff__c</fullName>
        <label>Forecasted UAT signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasted_WP_signoff__c</fullName>
        <label>Forecasted WO signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding__c</fullName>
        <label>Funding</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Determined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Workload</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IATA_Cost_Center__c</fullName>
        <label>IATA Cost Center</label>
        <picklist>
            <picklistValues>
                <fullName>PM0192CA01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IIS001CA01</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IATA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IATA Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry_Enhancement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Industry Enhancement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Service_Call_ID__c</fullName>
        <externalId>true</externalId>
        <label>IATA PO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Work_Order_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The ID of Work Orders from the lagacy system.</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of Work Orders from the lagacy system (Service Desk).</inlineHelpText>
        <label>Legacy Work Order ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_Work_Order_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link to parent WO</description>
        <label>Parent Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PercentValuePaid__c</fullName>
        <description>How much was  paid for given WO (%)</description>
        <inlineHelpText>30% upon WO signature
30% - UAT completion
40% - Approval for PROD</inlineHelpText>
        <label>Percent of Value Paid</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Planned_Duration__c</fullName>
        <label>Planned Duration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Finish__c</fullName>
        <label>Planned Finish</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Start__c</fullName>
        <inlineHelpText>Enter the planned start date</inlineHelpText>
        <label>Planned Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planning_PROD_Availability__c</fullName>
        <label>Planning - PROD Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planning_Quote_Availability__c</fullName>
        <label>Planning - Quote Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planning_Release_Number__c</fullName>
        <label>Planning - Release Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_UAT_Availability__c</fullName>
        <label>Planning - UAT Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quoting_Priority__c</fullName>
        <label>Quoting Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_to_Case_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Case No</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks_del__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_by_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested by Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA2_result_quote_delivery__c</fullName>
        <description>this field is updated by the SLA calculation script</description>
        <formula>if (
     OR (
        isblank(SLA_Actual_Quote_delivery__c), 
        (text(SLA_Subject_to_SLA__c))=&quot;No&quot;,
        isblank(text(SLA_Complexity_Category__c)) ,
        isblank(text(SLA_Subject_to_SLA__c)) ,
        isblank(text(SLA_Funct_Spec_sign_off__c)) 
      ), 
       &quot;&quot; ,



if (isblank(SLA_Planned_Quote_delivery__c),

   if (
    
      CASE(MOD( SLA_Funct_Spec_sign_off__c - DATE(1985,6,24),7), 

 	 0 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Funct_Spec_sign_off__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
 	 1 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Funct_Spec_sign_off__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
 	 2 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Funct_Spec_sign_off__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
 	 3 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Funct_Spec_sign_off__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
 	 4 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Funct_Spec_sign_off__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
 	 5 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Funct_Spec_sign_off__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
 	 6 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Funct_Spec_sign_off__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
 	 999) 
 	 + 
 	 (FLOOR(( SLA_Actual_Quote_delivery__c - SLA_Funct_Spec_sign_off__c )/7)*5) -1
	

    &gt; case (text(SLA_Complexity_Category__c), &quot;1&quot;,10,&quot;2&quot;,5,&quot;3&quot;,3,1
                 )   

    , &quot;Failed&quot;,&quot;Passed&quot;
   )
  , 

   if (
    
      CASE(MOD( SLA_Planned_Quote_delivery__c- DATE(1985,6,24),7), 

 	 0 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Planned_Quote_delivery__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
 	 1 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Planned_Quote_delivery__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
 	 2 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Planned_Quote_delivery__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
 	 3 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Planned_Quote_delivery__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
 	 4 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Planned_Quote_delivery__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
 	 5 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Planned_Quote_delivery__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
 	 6 , CASE( MOD( SLA_Actual_Quote_delivery__c - SLA_Planned_Quote_delivery__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
 	 999) 
 	 + 
 	 (FLOOR(( SLA_Actual_Quote_delivery__c - SLA_Planned_Quote_delivery__c )/7)*5) -1
	

    &gt;0
                    

    , &quot;Failed&quot;,&quot;Passed&quot;
   )

)



)</formula>
        <inlineHelpText>this field is updated by the SLA calculation script</inlineHelpText>
        <label>SLA2 result (quote delivery)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA4_2_result_UAT_start__c</fullName>
        <description>this field is updated by the SLA calcunation script</description>
        <formula>if (
     OR (
        isblank(SLA_UAT_Start_Actual__c), 
        isblank(SLA_UAT_Date_in_WO__c), 
        (text(SLA_Subject_to_SLA__c))=&quot;No&quot;,
        isblank(text(SLA_Complexity_Category__c)) ,
        isblank(text(SLA_Subject_to_SLA__c)) 
      ), 
       &quot;&quot; ,





   if (
    
      CASE(MOD( SLA_UAT_Date_in_WO__c - DATE(1985,6,24),7), 

 	 0 , CASE( MOD( SLA_UAT_Start_Actual__c - SLA_UAT_Date_in_WO__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
 	 1 , CASE( MOD( SLA_UAT_Start_Actual__c - SLA_UAT_Date_in_WO__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
 	 2 , CASE( MOD( SLA_UAT_Start_Actual__c - SLA_UAT_Date_in_WO__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
 	 3 , CASE( MOD( SLA_UAT_Start_Actual__c - SLA_UAT_Date_in_WO__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
 	 4 , CASE( MOD( SLA_UAT_Start_Actual__c - SLA_UAT_Date_in_WO__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
 	 5 , CASE( MOD( SLA_UAT_Start_Actual__c - SLA_UAT_Date_in_WO__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
 	 6 , CASE( MOD( SLA_UAT_Start_Actual__c - SLA_UAT_Date_in_WO__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
 	 999) 
 	 + 
 	 (FLOOR(( SLA_UAT_Start_Actual__c - SLA_UAT_Date_in_WO__c )/7)*5) -1
	

    &gt; case (text(SLA_Complexity_Category__c), &quot;1&quot;,10,&quot;2&quot;,5,&quot;3&quot;,1,1
                 )   

    , &quot;Failed&quot;,&quot;Passed&quot;
   )






)</formula>
        <inlineHelpText>this field is updated by the SLA calcunation script</inlineHelpText>
        <label>SLA4.2 result (UAT start)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA6_result_UAT_fix__c</fullName>
        <description>this field is updated by the SLA calculation script</description>
        <formula>if (OR (
            isblank(SLA_Additional_Fixing_days__c), 
            text(SLA_Subject_to_SLA__c)=&quot;No&quot;,
             isblank(text(SLA_Complexity_Category__c)) ,
             isblank(text(SLA_Subject_to_SLA__c)) 
             ), &quot;&quot; ,

IF(AND(text(SLA_Complexity_Category__c)=&quot;1&quot;, SLA_Additional_Fixing_days__c &gt;7), &quot;Failed&quot;, 
IF(AND(text(SLA_Complexity_Category__c)=&quot;2&quot;, SLA_Additional_Fixing_days__c &gt;6), &quot;Failed&quot;, 
IF(AND(text(SLA_Complexity_Category__c)=&quot;3&quot;, SLA_Additional_Fixing_days__c &gt;5), &quot;Failed&quot;, 




&quot;Passed&quot;
     )



) 

)
)</formula>
        <inlineHelpText>this field is updated by the SLA calculation script</inlineHelpText>
        <label>SLA6 result (UAT fix)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Actual_Quote_delivery__c</fullName>
        <description>date of actual delivery of Quote and delivery plan by BPS</description>
        <inlineHelpText>date of actual delivery of Quote and delivery plan by BPS</inlineHelpText>
        <label>Actual Quote delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Additional_Fixing_days__c</fullName>
        <description>number of days between failure of initial delivery till the date of delivery which passed the final acceptance test, minus all time for IATA and customer tests.</description>
        <inlineHelpText>number of days between failure of initial delivery till the date of delivery which passed the final acceptance test, minus all time for IATA and customer tests.</inlineHelpText>
        <label>Additional Fixing (days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Business_Req_provided__c</fullName>
        <description>date of delivery of business requirements by IATA</description>
        <inlineHelpText>date of delivery of business requirements by IATA</inlineHelpText>
        <label>Business Req. provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Complexity_Category__c</fullName>
        <description>1 - more complex (product core service feature)
2 - compex customer-specific configuration
3 - simple change request</description>
        <inlineHelpText>1 - more complex (product core service feature)
2 - compex customer-specific configuration
3 - simple change request</inlineHelpText>
        <label>Complexity Category</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_Final_Funct_Req_received__c</fullName>
        <description>date of final delivery of functional requirements by BPS, considered by SLA 1. 

(cat. 1 - 20 b/days after business req., cat.2 - 10 b/days, cat.3 - 5 b/days)</description>
        <inlineHelpText>date of final delivery of functional requirements by BPS, considered by SLA 1. 

- cat. 1 - 20 b/days after business req., 
- cat.2 - 10 b/days, 
- cat.3 - 5 b/days</inlineHelpText>
        <label>Final Funct. Req. received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Funct_Spec_sign_off__c</fullName>
        <description>date of IATA&apos;s approval of functional requirements</description>
        <inlineHelpText>date of IATA&apos;s approval of functional requirements</inlineHelpText>
        <label>Funct. Spec sign-off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Initial_Funct_Req_received__c</fullName>
        <description>date of initial delivery of functional requirements document by BPS</description>
        <inlineHelpText>date of initial delivery of functional requirements document by BPS</inlineHelpText>
        <label>Initial  Funct. Req. received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Planned_Quote_delivery__c</fullName>
        <description>Agreed date for delivery of  Quote and delivery plan (WO in BPS terminology). 

This field can be left empty - in this case default day will be defined by SLA calculatioin, as defined in IATA-BPS contract.</description>
        <inlineHelpText>Agreed date for delivery of  Quote and delivery plan (WO in BPS terminology). 

If field empty - date will be defined according to SLA:

- Cat1: 10 b/days from approval of functional requirements
- Cat2: 5 b/days
- Cat3: 3 b/days</inlineHelpText>
        <label>Planned Quote delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_SLA1_results_funct_req__c</fullName>
        <description>this field is updated by the SLA calculation script</description>
        <formula>if (
     OR (
        isblank(SLA_Business_Req_provided__c), 
        (text(SLA_Subject_to_SLA__c))=&quot;No&quot;,
        isblank(text(SLA_Complexity_Category__c)) ,
        isblank(text(SLA_Subject_to_SLA__c)) ,
        isblank(text(SLA_Final_Funct_Req_received__c)) 
      ), 
       &quot;&quot; ,

if (
    
      CASE(MOD( SLA_Business_Req_provided__c - DATE(1985,6,24),7), 

 	 0 , CASE( MOD( SLA_Final_Funct_Req_received__c - SLA_Business_Req_provided__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
 	 1 , CASE( MOD( SLA_Final_Funct_Req_received__c - SLA_Business_Req_provided__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
 	 2 , CASE( MOD( SLA_Final_Funct_Req_received__c - SLA_Business_Req_provided__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
 	 3 , CASE( MOD( SLA_Final_Funct_Req_received__c - SLA_Business_Req_provided__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
 	 4 , CASE( MOD( SLA_Final_Funct_Req_received__c - SLA_Business_Req_provided__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
 	 5 , CASE( MOD( SLA_Final_Funct_Req_received__c - SLA_Business_Req_provided__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
 	 6 , CASE( MOD( SLA_Final_Funct_Req_received__c - SLA_Business_Req_provided__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
 	 999) 
 	 + 
 	 (FLOOR(( SLA_Final_Funct_Req_received__c - SLA_Business_Req_provided__c )/7)*5) -1
	

    &gt; case (text(SLA_Complexity_Category__c), &quot;1&quot;,20,&quot;2&quot;,10,&quot;3&quot;,5,1
                 )   

    , &quot;Failed&quot;,&quot;Passed&quot;
)
)</formula>
        <inlineHelpText>this field is updated by the SLA calculation script</inlineHelpText>
        <label>SLA1 results (funct. req)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_SLA5_result_iterations__c</fullName>
        <description>this field is updated by the SLA calculation script</description>
        <formula>IF(AND(text(SLA_Complexity_Category__c)=&quot;1&quot;, SLA_UAT_Iterations__c  &gt;4), &quot;Failed&quot;,
  IF(AND(text(SLA_Complexity_Category__c)=&quot;2&quot;, SLA_UAT_Iterations__c  &gt;2), &quot;Failed&quot;,
       IF(AND(text(SLA_Complexity_Category__c)=&quot;3&quot;, SLA_UAT_Iterations__c  &gt;1), &quot;Failed&quot;,

if (OR (isblank(SLA_UAT_Iterations__c), (text(SLA_Subject_to_SLA__c))=&quot;No&quot;,isblank(text(SLA_Complexity_Category__c)) ,isblank(text(SLA_Subject_to_SLA__c)) ), &quot;&quot; ,&quot;Passed&quot;) 



)

)

)</formula>
        <inlineHelpText>this field is updated by the SLA calculation script</inlineHelpText>
        <label>SLA5 result (iterations)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_SLC_Applied__c</fullName>
        <description>Service Level Credit actually applied to this WO (% of value)

this field should NOT be updated manually, it is updated by the SLA calculation script on a regular basis</description>
        <inlineHelpText>Service Level Credit actually applied to this WO (% of value)

this field should NOT be updated manually, it is updated by the SLA calculation script on a regular basis</inlineHelpText>
        <label>SLC % Applied</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_SLC_Calculated__c</fullName>
        <description>Service Level Credit to be applied to this WO (% of value)

this field is updated by the SLA calculation script on a regular basis</description>
        <inlineHelpText>Service Level Credit to be applied to this WO (% of value)

this field is updated by the SLA calculation script on a regular basis</inlineHelpText>
        <label>SLC % Calculated</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SLA_SLC_Value_Applied__c</fullName>
        <description>Service Level Credit to be applied to this WO (value)

this field should NOT be updated manually, it is updated by the SLA calculation script on a regular basis</description>
        <inlineHelpText>Service Level Credit to be applied to this WO (value)

this field should NOT be updated manually, it is updated by the SLA calculation script on a regular basis</inlineHelpText>
        <label>SLC Value Applied</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Subject_to_SLA__c</fullName>
        <label>Subject to SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_UAT_Date_in_WO__c</fullName>
        <description>date of planned UAT start identified in the delivery plan (WO)</description>
        <inlineHelpText>date of planned UAT start identified in the delivery plan (WO)</inlineHelpText>
        <label>UAT Date in WO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_UAT_Doc_Received_3_days_SLA3__c</fullName>
        <description>As per IATA-BPS contract, test scripts and implementation documentation  should be sent to IATA 3 days before Actual UAT start.</description>
        <inlineHelpText>As per IATA-BPS contract, test scripts and implementation documentation  should be sent to IATA 3 days before Actual UAT start.</inlineHelpText>
        <label>UAT Doc. Received 3 days (SLA3)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_UAT_Iterations__c</fullName>
        <description>the number of testing iterations made by IATA/customer as a result of incomplete delivery/ bugs - till the final delivery acceptance.</description>
        <inlineHelpText>the number of testing re-iterations made by IATA/customer as a result of incomplete delivery/ bugs - till the final delivery acceptance.

SLA:
- cat. 1 - 4 iterations
- cat. 2 - 2 iterations
- cat. 3 - 1 iterations</inlineHelpText>
        <label>UAT re-iterations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_UAT_Start_Actual__c</fullName>
        <description>date when UAT was actually started.

Contractual SLA: 
- cat. 1  - variance of 10 b/days from delivery plan
- cat. 2  - variance of 5 b/days from delivery plan
- cat. 3  - variance of 1 b/days from delivery plan</description>
        <inlineHelpText>date when UAT was actually started.

SLA: 
- cat. 1  - variance of 10 b/days from delivery plan
- cat. 2  - variance of 5 b/days from delivery plan
- cat. 3  - variance of 1 b/days from delivery plan</inlineHelpText>
        <label>UAT Actual Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLC_Value_Calculated__c</fullName>
        <description>Service Level Credit to be applied to this WO (value)

this field is updated by the SLA calculation script on a regular basis</description>
        <inlineHelpText>Service Level Credit to be applied to this WO (value)

this field is updated by the SLA calculation script on a regular basis</inlineHelpText>
        <label>SLC Value Calculated</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduling_Priority__c</fullName>
        <label>Scheduling Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Reference__c</fullName>
        <label>Service Provider Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Provider__c</fullName>
        <label>Service Provider</label>
        <picklist>
            <picklistValues>
                <fullName>ATOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b-process / Ariba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deskom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPayables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Prior_to_Hold__c</fullName>
        <label>Status Prior to Hold</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Compiling Business Requirements, IATA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Compiling Technical Requirements, Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 - Pending IATA SA review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Pending Quote / QQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Pending Technical Approval (spec, Q)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Pending Cust. Change Order Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Pending IATA Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Pending Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Scheduled / Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9a - Pending IATA Acceptance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9b - Pending Customer Acceptance test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9c - Pending Development team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9d - Test Failed, pending fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9e - Pending release into Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9f - Released into Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 - Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Contractor_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-Contractor Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UAT_3_days_notification_SLA4_1__c</fullName>
        <description>As per IATA-BPS contract, confirmation of UAT start day should be sent 3 days before it is scheduled according to delivery plan.</description>
        <inlineHelpText>As per IATA-BPS contract, confirmation of UAT start day should be sent 3 days before it is scheduled according to delivery plan.</inlineHelpText>
        <label>UAT 3 days&apos; notification  (SLA4.1)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Currency__c</fullName>
        <label>Value Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <label>Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>IATA Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor&apos;s raw estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendors&apos; quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>InvoiceWorks</description>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>